--- a/Backend/.env
+++ b/Backend/.env
@@ -4,7 +4,7 @@ URL_BACKEND=http://localhost:3000/api/
 PORT = 3000
 
 MONGO_URI_LOCAL= "mongodb://localhost:27017/Carros"
-MONGODB_URI_PRODUCTION= "mongodb+srv://silviaveronica141998:5WniPDE2JuVqEL7o@cluster0.ektll.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI_PRODUCTION= "mongodb+srv://silviaveronica141998:5WniPDE2JuVqEL7o@cluster0.ektll.mongodb.net/Autos?retryWrites=true&w=majority&appName=Cluster0"
 
 JWT_SECRET = SDFGSJDF7246782CFBKJSDF
 
@@ -13,3 +13,11 @@ HOST_MAILTRAP = smtp.gmail.com
 PORT_MAILTRAP = 465
 USER_MAILTRAP = silviaveronica141998@gmail.com
 PASS_MAILTRAP = qfjcpukeccbpqrse
+
+
+# // SMTP DE OUTLOOK
+# EMAIL_SERVICE = hotmail
+# HOST_MAILTRAP = smtp.office365.com
+# PORT_MAILTRAP = 587
+# USER_MAILTRAP = Tu correo de hotmail
+# PASS_MAILTRAP = Tu password de hotmail
