--- a/Backend/package.json
+++ b/Backend/package.json
@@ -5,9 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
-    
   },
   "keywords": [],
   "author": "",
@@ -19,6 +19,14 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.3",
-    "nodemailer": "^6.9.14"
+    "nodemailer": "^6.9.14",
+    "supertest": "^7.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/register": "^7.24.6",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
   }
 }
